# exciton-diffusion

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  contributing.md  package.json  pyproject.toml  requirements.txt  setup.py
analysis/: main.py  utils.py
analysis/cli/: __init__.py  show.py  utils.py
analysis/curve_fitting/: least_squares.py
analysis/curve_fitting/tests/: test_least_squares.py
analysis/show/: excitations.py  simulation_output.py
example_input/: exciton_parameters.json  pulsed_excitation_parameters.json
exciton_diffusion/: __init__.py  cli.py  constants.py
exciton_diffusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
exciton_diffusion/excitation_sources/: __init__.py  base.py  excitation_source_2d.py  test_excitation_source_2d.py
exciton_diffusion/excitation_sources/excitation_location_generators/: __init__.py  base.py  gaussian_spot_2d_generator.py  test_gaussian_spot_2d_generator.py
exciton_diffusion/excitation_sources/excitation_time_generators/: __init__.py  base.py  cw_laser.py  gaussian_pulse_train.py  test_cw_laser.py  (+1 more)
exciton_diffusion/exciton_populations/: _2d.py  __init__.py
exciton_diffusion/experiments/: __init__.py  base.py  spatially_resolved_pl.py  spatially_resolved_pl_2d.py  test_spatially_resolved_pl.py  test_spatially_resolved_pl_2d.py
experiment/: Cargo.toml
experiment/src/: cli_schema.rs  coord2d.rs  excitation_source2d.rs  exciton.rs  lib.rs  main.rs  simulation.rs  utils.rs
tools/: bootstrap.sh  precommit_format.py  run-mypy  run-ruff  script_setup.sh
