[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.1",
    "pydantic>=2.11.1",
]

[project.scripts]
analyze = "analysis.cli:analyze"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "ruff>=0.11.2",
]
